# WALA

./: .gitignore  LICENSE  README.md  README.md.orig  pyproject.toml  requirements.txt
checkpoints/: README.md
configs/: wala.yaml
deployment/model_server/: README.md  server_policy.py
deployment/model_server/tools/: websocket_policy_client.py  websocket_policy_server.py
examples/Pretrain/train_files/: run_pretrain_wala.sh  wala_pretrain.yaml
examples/Pretrain/train_files/data_registry/: data_config.py
examples/Robocasa_tabletop/: README.md
examples/Robocasa_tabletop/eval_files/: adaptive_ensemble.py  batch_eval_args.sh  model2robocasa_interface.py  run_robocasa_eval_ppu.sh  simulation_env.py  simulation_env_ppu.py
examples/Robocasa_tabletop/eval_files/wrappers/: multistep_wrapper.py  video_recording_wrapper.py
examples/Robocasa_tabletop/train_files/: run_robocasa_train_wala.sh  wala_robocasa.yaml
examples/Robocasa_tabletop/train_files/data_registry/: data_config.py
examples/Robotwin/: README.md
examples/Robotwin/eval_files/: deploy_policy.yml  eval.sh  model2robotwin_interface.py  model2robotwin_interface_joint.py  run_policy_server.sh  run_robotwin_policy_servers_ppu.sh  start_eval.sh
examples/Robotwin/train_files/: run_robotwin_train_wala.sh  wala_robotwin.yaml
src/WALA/model/: tools.py
src/WALA/utils/: image.py  logging.py
wala/config/deepseeds/: deepspeed_zero2.yaml  deepspeed_zero3.yaml
wala/dataloader/: __init__.py  dataloader_manager.py  lerobot_datasets.py  vlm_datasets.py
wala/dataloader/gr00t_lerobot/: README.md  data_config.py  datasets.py  embodiment_tags.py  mixtures.py  registry.py
wala/model/: tools.py
wala/model/framework/: __init__.py  base_framework.py  share_tools.py
wala/training/: train_unified.py  train_wala.py
wala/training/trainer_utils/: config_tracker.py  overwatch.py  trainer_tools.py
(+23 files in other folders)
